# spotify_hybrid_recommender_system

./: .gitignore  Dockerfile  Makefile  README.md  app.py  collaborative_filtering.py  content_based_filtering.py  data_cleaning.py  dvc.yaml  hybrid_recommendations.py  pyproject.toml  requirements.txt  transform_filtered_data.py  transformer.pkl  transformer.pkl.dvc
.dvc/: config
.github/workflows/: ci.yaml
data/: .gitignore  transformed_hybrid_data.npz
data/cleaned/: .gitignore
data/raw/: .gitignore  Music Info.csv.dvc  Music info.csv.dvc  Music_info.csv.dvc
deploy/scripts/: install_docker.sh  start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data_cleaning_utils_py.py  spotify_collaborative_filtering.py  spotify_content_based_filtering.py
notebooks/notebooks/: spotify_content_based_filtering.py
