[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotify_hybrid_recommender_syatem"
version = "0.0.1"
description = "A ML project to recommand content to user"
authors = [
  { name = "amit" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["spotify_hybrid_recommender_syatem"]
include = ["pyproject.toml", "spotify_hybrid_recommender_syatem/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spotify_hybrid_recommender_syatem"]
force-sort-within-sections = true

